# rust-binance

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/: binance.rs  futures-ws.rs
src/: error.rs  lib.rs  parsers.rs
src/common/: client.rs  mod.rs  stream.rs  websocket.rs
src/futures/: client.rs  mod.rs  websocket.rs
src/spot/: client.rs  websocket.rs
src/types/: interval.rs  mod.rs
