[package]
name = "binance"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
futures-util = "0.3.16"
# TODO: Update to 0.11.0
hmac = "0.10.0"
reqwest = { version = "0.11", default_features = false, features = ["serde_json", "json", "rustls-tls"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.66"
serde_urlencoded = "0.7.0"
sha2 = "0.9.5"
thiserror = "1.0.26"
tokio = "1.12.0"
tokio-stream = "0.1.7"
tokio-tungstenite = { version = "0.15.0", features = ["rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0.10", features = ["derive"] }
